--- a/index.html
+++ b/index.html
@@ -434,6 +434,123 @@
           font-size: 18px;
         }
       }
+
+      /* Courses Section Styles */
+      .courses-section {
+        background-color: white;
+        padding: 80px 0;
+        margin: 0;
+      }
+
+      .courses-container {
+        max-width: 1300px;
+        margin: 0 auto;
+        padding: 0 20px;
+      }
+
+      .courses-grid {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 30px;
+        align-items: start;
+      }
+
+      .course-card {
+        background: white;
+        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+        overflow: hidden;
+        transition: all 0.3s ease;
+        cursor: pointer;
+        position: relative;
+      }
+
+      .course-card:hover {
+        transform: translateY(-8px);
+        box-shadow: 0 8px 30px rgba(0, 0, 0, 0.15);
+      }
+
+      .course-image {
+        width: 100%;
+        height: 250px;
+        overflow: hidden;
+        position: relative;
+      }
+
+      .course-image img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: transform 0.3s ease;
+      }
+
+      .course-card:hover .course-image img {
+        transform: scale(1.05);
+      }
+
+      .course-label {
+        background-color: #b6081d;
+        color: #fff;
+        font-size: 16px;
+        font-weight: 600;
+        text-align: center;
+        padding: 20px 15px;
+        margin: 0;
+        line-height: 1.3;
+        min-height: 60px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      /* Responsive Design */
+      @media (max-width: 1024px) {
+        .courses-grid {
+          grid-template-columns: repeat(2, 1fr);
+          gap: 25px;
+        }
+      }
+
+      @media (max-width: 768px) {
+        .courses-section {
+          padding: 60px 0;
+        }
+
+        .courses-grid {
+          grid-template-columns: repeat(2, 1fr);
+          gap: 20px;
+        }
+
+        .course-image {
+          height: 200px;
+        }
+
+        .course-label {
+          font-size: 14px;
+          padding: 15px 10px;
+          min-height: 50px;
+        }
+      }
+
+      @media (max-width: 480px) {
+        .courses-container {
+          padding: 0 15px;
+        }
+
+        .courses-grid {
+          grid-template-columns: 1fr;
+          gap: 20px;
+        }
+
+        .course-image {
+          height: 220px;
+        }
+
+        .course-label {
+          font-size: 15px;
+          padding: 18px 15px;
+          min-height: 55px;
+        }
+      }
     </style>
   </head>
   <body>
@@ -619,5 +736,142 @@
         </div>
       </div>
     </section>
+
+    <!-- Courses Section -->
+    <section class="courses-section">
+      <div class="courses-container">
+        <div class="courses-grid">
+          <!-- Course 1: PGDM General -->
+          <div class="course-card">
+            <div class="course-image">
+              <img
+                src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80"
+                alt="PGDM General Management"
+              />
+            </div>
+            <div class="course-label">PGDM General</div>
+          </div>
+
+          <!-- Course 2: PGDM Financial Management -->
+          <div class="course-card">
+            <div class="course-image">
+              <img
+                src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80"
+                alt="PGDM Financial Management"
+              />
+            </div>
+            <div class="course-label">PGDM Financial Management</div>
+          </div>
+
+          <!-- Course 3: PGDM Research & Business Analytics -->
+          <div class="course-card">
+            <div class="course-image">
+              <img
+                src="https://images.unsplash.com/photo-1560250097-0b93528c311a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80"
+                alt="PGDM Research & Business Analytics"
+              />
+            </div>
+            <div class="course-label">PGDM Research & Business Analytics</div>
+          </div>
+
+          <!-- Course 4: PGDM Artificial Intelligence & Data Science -->
+          <div class="course-card">
+            <div class="course-image">
+              <img
+                src="https://images.unsplash.com/photo-1494790108755-2616b612b786?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80"
+                alt="PGDM Artificial Intelligence & Data Science"
+              />
+            </div>
+            <div class="course-label">
+              PGDM Artificial Intelligence & Data Science
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <script>
+      // Minimal JavaScript for enhanced course card interactions
+      document.addEventListener("DOMContentLoaded", function () {
+        const courseCards = document.querySelectorAll(".course-card");
+
+        // Add click handlers for course cards
+        courseCards.forEach((card) => {
+          card.addEventListener("click", function () {
+            const courseTitle = this.querySelector(".course-label").textContent;
+            console.log(`${courseTitle} clicked`);
+
+            // Add ripple effect
+            const ripple = document.createElement("span");
+            const rect = this.getBoundingClientRect();
+            const size = Math.max(rect.width, rect.height);
+            const x = event.clientX - rect.left - size / 2;
+            const y = event.clientY - rect.top - size / 2;
+
+            ripple.style.width = ripple.style.height = size + "px";
+            ripple.style.left = x + "px";
+            ripple.style.top = y + "px";
+            ripple.classList.add("ripple");
+
+            this.appendChild(ripple);
+
+            setTimeout(() => {
+              ripple.remove();
+            }, 600);
+          });
+        });
+
+        // Add smooth scroll animation for course cards
+        const observerOptions = {
+          threshold: 0.1,
+          rootMargin: "0px 0px -50px 0px",
+        };
+
+        const observer = new IntersectionObserver((entries) => {
+          entries.forEach((entry) => {
+            if (entry.isIntersecting) {
+              entry.target.style.opacity = "1";
+              entry.target.style.transform = "translateY(0)";
+            }
+          });
+        }, observerOptions);
+
+        // Initialize course cards with animation
+        courseCards.forEach((card, index) => {
+          card.style.opacity = "0";
+          card.style.transform = "translateY(30px)";
+          card.style.transition = `opacity 0.6s ease ${
+            index * 0.1
+          }s, transform 0.6s ease ${index * 0.1}s`;
+          observer.observe(card);
+        });
+      });
+
+      // Add CSS for ripple effect
+      const style = document.createElement("style");
+      style.textContent = `
+        .course-card {
+          position: relative;
+          overflow: hidden;
+        }
+        
+        .ripple {
+          position: absolute;
+          border-radius: 50%;
+          background: rgba(0, 0, 0, 0.1);
+          transform: scale(0);
+          animation: ripple-animation 0.6s linear;
+          pointer-events: none;
+        }
+        
+        @keyframes ripple-animation {
+          to {
+            transform: scale(4);
+            opacity: 0;
+          }
+        }
+      `;
+      document.head.appendChild(style);
+    </script>
   </body>
 </html>
