--- a/index.html
+++ b/index.html
@@ -4,557 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LBSIM Landing Page</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-
-      body {
-        font-family: Arial, sans-serif;
-        background-color: white;
-        padding: 0;
-        margin: 0;
-      }
-
-      .container {
-        max-width: 1200px;
-        margin: 80px auto;
-        padding: 0 20px;
-        background: white;
-      }
-
-      .container h2 {
-        text-align: center;
-        font-size: 48px;
-        font-weight: bold;
-        color: #b6081d;
-        margin-bottom: 50px;
-      }
-
-      .accreditations {
-        display: flex;
-      }
-
-      .column {
-        padding: 0px 30px;
-        border-right: 3px solid #000;
-      }
-
-      .column:first-child {
-        flex: 1;
-      }
-
-      .column:nth-child(2) {
-        flex: 1;
-      }
-
-      .column:nth-child(3) {
-        flex: 1.5;
-      }
-
-      .column:last-child {
-        flex: 1;
-        border-right: none;
-      }
-
-      .column h3 {
-        font-size: 18px;
-        font-weight: bold;
-        color: #000;
-        margin-bottom: 40px;
-        text-align: center;
-      }
-
-      .logo-box {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding: 5px;
-        /* margin-bottom: 15px; */
-        border: 1px solid #e0e0e0;
-        background: white;
-        border-radius: 4px;
-        min-height: 80px;
-      }
-
-      .logo-box img {
-        max-width: 80px;
-        max-height: 80px;
-        object-fit: contain;
-        /* margin-bottom: 8px; */
-      }
-
-      .logo-text {
-        font-size: 10px;
-        color: #000;
-        font-weight: 500;
-        line-height: 1.2;
-        text-align: center;
-      }
-
-      .grid-2x2 {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 15px;
-      }
-
-      .grid-4x2 {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        gap: 20px;
-      }
-
-      .grid-4x2 .logo-box {
-        min-height: 80px;
-        padding: 5px;
-      }
-
-      .grid-4x2 .logo-box img {
-        max-width: 80px;
-        max-height: 80px;
-      }
-
-      .side-by-side {
-        display: flex;
-        gap: 15px;
-        /* margin-bottom: 5px; */
-      }
-
-      .side-by-side .logo-box {
-        flex: 1;
-        min-height: 70px;
-      }
-
-      .side-by-side .logo-box img {
-        max-width: 80px;
-        max-height: 80px;
-      }
-
-      .pgdm-list {
-        list-style: none;
-        padding: 0;
-        margin-top: 15px;
-      }
-
-      .pgdm-list li {
-        font-size: 14px;
-        color: #000;
-        margin-bottom: 8px;
-        padding-left: 20px;
-        position: relative;
-      }
-
-      .pgdm-list li:before {
-        content: counter(item);
-        counter-increment: item;
-        position: absolute;
-        left: 0;
-        font-weight: bold;
-      }
-
-      .pgdm-list {
-        counter-reset: item;
-      }
-
-      .exams-grid .logo-box img {
-        max-width: 80px;
-        max-height: 40px;
-      }
-
-      @media (max-width: 768px) {
-        .accreditations {
-          flex-direction: column;
-        }
-
-        .column {
-          border-right: none;
-          margin-bottom: 40px;
-          padding: 0px;
-        }
-
-        .column h3 {
-          margin-bottom: 20px;
-        }
-
-        .container h2 {
-          font-size: 32px;
-          margin-bottom: 40px;
-        }
-
-        .logo-box img {
-          max-height: 100% !important;
-          height: 150px;
-          width: 150px !important;
-          max-width: 100% !important;
-        }
-
-        .grid-4x2 .logo-box img {
-          max-height: 80px !important;
-          max-width: 80px !important;
-        }
-
-        .column:last-child {
-          border-bottom: none;
-        }
-      }
-
-      @media (max-width: 480px) {
-        .grid-4x2 {
-          grid-template-columns: 1fr 1fr 1fr;
-        }
-      }
-
-      @media (max-width: 360px) {
-        .grid-4x2 {
-          grid-template-columns: 1fr 1fr;
-        }
-      }
-
-      /* WHO WE ARE Section Styles */
-      .who-we-are {
-        background-color: #f8f9fa;
-        padding: 80px 0;
-        margin: 0;
-      }
-
-      .who-we-are-container {
-        max-width: 1300px;
-        margin: 0 auto;
-        padding: 0 20px;
-      }
-
-      .content-wrapper {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 60px;
-        align-items: center;
-      }
-
-      /* Left Column: Text Content */
-      .text-content {
-        padding-right: 40px;
-      }
-
-      .subtitle {
-        font-size: 14px;
-        font-weight: 600;
-        letter-spacing: 2px;
-        color: #dc2626;
-        text-transform: uppercase;
-        margin-bottom: 20px;
-      }
-
-      .main-title {
-        font-size: 48px;
-        font-weight: 700;
-        line-height: 1;
-        color: #1f2937;
-        margin-bottom: 30px;
-        font-family: Arial, sans-serif;
-      }
-
-      .description {
-        font-size: 16px;
-        line-height: 1.6;
-        color: #6b7280;
-        margin-bottom: 40px;
-        font-weight: 400;
-      }
-
-      .cta-button {
-        background-color: #b6081d;
-        color: white;
-        border: none;
-        padding: 16px 32px;
-        font-size: 14px;
-        font-weight: 600;
-        letter-spacing: 1px;
-        text-transform: uppercase;
-        /* border-radius: 6px; */
-        cursor: pointer;
-        transition: all 0.3s ease;
-      }
-
-      .cta-button:hover {
-        background-color: #910717;
-        transform: translateY(-2px);
-      }
-
-      /* Right Column: Image Content */
-      .image-content {
-        position: relative;
-      }
-
-      .image-wrapper {
-        position: relative;
-        /* border-radius: 8px; */
-        /* overflow: hidden; */
-      }
-
-      .campus-image {
-        width: 100%;
-        max-height: 500px;
-        object-fit: cover;
-        display: block;
-      }
-
-      /* L-shaped Green Border */
-      .green-border {
-        position: absolute;
-        top: 102px;
-        left: -32px;
-        width: 32px;
-        height: 82%;
-        background-color: #b6081d;
-        z-index: 2;
-      }
-
-      .green-border::after {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 300px;
-        height: 32px;
-        background-color: #b6081d;
-      }
-
-      /* Overlay Card */
-      .overlay-card {
-        position: absolute;
-        bottom: -60px;
-        right: -80px;
-        background: white;
-        padding: 20px;
-        /* border-radius: 8px; */
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
-        max-width: 280px;
-        z-index: 3;
-      }
-
-      .card-icon {
-        font-size: 40px;
-        /* margin-bottom: 15px; */
-        text-align: center;
-        color: #dc2626;
-      }
-
-      .card-title {
-        font-size: 28px;
-        font-weight: 700;
-        text-align: center;
-        color: #1f2937;
-        margin-bottom: 12px;
-        line-height: 1.3;
-      }
-
-      .card-description {
-        font-size: 14px;
-        line-height: 1.5;
-        color: #6b7280;
-        margin: 0;
-        text-align: center;
-      }
-
-      /* Responsive Design */
-      @media (max-width: 1024px) {
-        .content-wrapper {
-          gap: 40px;
-        }
-
-        .main-title {
-          font-size: 40px;
-        }
-
-        .campus-image {
-          height: 400px;
-        }
-      }
-
-      @media (max-width: 768px) {
-        .who-we-are {
-          padding: 60px 0;
-        }
-
-        .content-wrapper {
-          grid-template-columns: 1fr;
-          gap: 40px;
-        }
-
-        .text-content {
-          text-align: center;
-          padding-right: 0;
-        }
-
-        .main-title {
-          font-size: 36px;
-        }
-
-        .overlay-card {
-          bottom: 20px;
-          right: 20px;
-          left: 20px;
-          max-width: none;
-        }
-      }
-
-      @media (max-width: 480px) {
-        .who-we-are-container {
-          padding: 0 15px;
-        }
-
-        .main-title {
-          font-size: 28px;
-        }
-
-        .description {
-          font-size: 15px;
-        }
-
-        .cta-button {
-          padding: 14px 28px;
-          font-size: 13px;
-        }
-
-        .campus-image {
-          height: 300px;
-        }
-
-        .overlay-card {
-          padding: 20px;
-          bottom: 15px;
-          right: 15px;
-          left: 15px;
-        }
-
-        .card-title {
-          font-size: 18px;
-        }
-      }
-
-      /* Courses Section Styles */
-      .courses-section {
-        background-color: white;
-        padding: 80px 0;
-        margin: 0;
-      }
-
-      .courses-container {
-        max-width: 1300px;
-        margin: 0 auto;
-        padding: 0 20px;
-      }
-
-      .courses-grid {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        gap: 30px;
-        align-items: start;
-      }
-
-      .course-card {
-        background: white;
-        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-        overflow: hidden;
-        transition: all 0.3s ease;
-        cursor: pointer;
-        position: relative;
-      }
-
-      .course-card:hover {
-        transform: translateY(-8px);
-        box-shadow: 0 8px 30px rgba(0, 0, 0, 0.15);
-      }
-
-      .course-image {
-        width: 100%;
-        height: 250px;
-        overflow: hidden;
-        position: relative;
-      }
-
-      .course-image img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        transition: transform 0.3s ease;
-      }
-
-      .course-card:hover .course-image img {
-        transform: scale(1.05);
-      }
-
-      .course-label {
-        background-color: #b6081d;
-        color: #fff;
-        font-size: 16px;
-        font-weight: 600;
-        text-align: center;
-        padding: 20px 15px;
-        margin: 0;
-        line-height: 1.3;
-        min-height: 60px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      /* Responsive Design */
-      @media (max-width: 1024px) {
-        .courses-grid {
-          grid-template-columns: repeat(2, 1fr);
-          gap: 25px;
-        }
-      }
-
-      @media (max-width: 768px) {
-        .courses-section {
-          padding: 60px 0;
-        }
-
-        .courses-grid {
-          grid-template-columns: repeat(2, 1fr);
-          gap: 20px;
-        }
-
-        .course-image {
-          height: 200px;
-        }
-
-        .course-label {
-          font-size: 14px;
-          padding: 15px 10px;
-          min-height: 50px;
-        }
-      }
-
-      @media (max-width: 480px) {
-        .courses-container {
-          padding: 0 15px;
-        }
-
-        .courses-grid {
-          grid-template-columns: 1fr;
-          gap: 20px;
-        }
-
-        .course-image {
-          height: 220px;
-        }
-
-        .course-label {
-          font-size: 15px;
-          padding: 18px 15px;
-          min-height: 55px;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="container">
+    <section class="accreditations-section container">
       <h2>Accreditations & Memberships</h2>
       <div class="accreditations">
         <!-- Column 1: Accreditations -->
@@ -739,7 +192,8 @@
 
     <!-- Courses Section -->
     <section class="courses-section">
-      <div class="courses-container">
+      <div class="courses-container container">
+        <h2 style="color: #000">Select Your Program</h2>
         <div class="courses-grid">
           <!-- Course 1: PGDM General -->
           <div class="course-card">
@@ -788,90 +242,95 @@
           </div>
         </div>
       </div>
+      <button
+        class="cta-button"
+        style="margin: 0 auto; display: block; margin-top: 40px"
+      >
+        Apply Now
+      </button>
     </section>
 
-    <script>
-      // Minimal JavaScript for enhanced course card interactions
-      document.addEventListener("DOMContentLoaded", function () {
-        const courseCards = document.querySelectorAll(".course-card");
+    <!-- University Partners Section -->
+    <section class="university-partners">
+      <h2 style="color: #000">Placement & Recruiters</h2>
+      <div class="university-partners-container">
+        <div class="university-grid">
+          <div class="university-logo">
+            <img
+              src="images/university-logos/greenwich.png"
+              alt="University of Greenwich logo"
+            />
+          </div>
+          <div class="university-logo">
+            <img
+              src="images/university-logos/oxford.png"
+              alt="University of Oxford logo"
+            />
+          </div>
+          <div class="university-logo">
+            <img
+              src="images/university-logos/chicago.png"
+              alt="The University of Chicago logo"
+            />
+          </div>
+          <div class="university-logo">
+            <img
+              src="images/university-logos/temple.png"
+              alt="Temple University logo"
+            />
+          </div>
+          <div class="university-logo">
+            <img
+              src="images/university-logos/greenwich.png"
+              alt="University of Greenwich logo"
+            />
+          </div>
+          <div class="university-logo">
+            <img
+              src="images/university-logos/oxford.png"
+              alt="University of Oxford logo"
+            />
+          </div>
+          <div class="university-logo">
+            <img
+              src="images/university-logos/chicago.png"
+              alt="The University of Chicago logo"
+            />
+          </div>
+          <div class="university-logo">
+            <img
+              src="images/university-logos/temple.png"
+              alt="Temple University logo"
+            />
+          </div>
+          <div class="university-logo">
+            <img
+              src="images/university-logos/arkansas.png"
+              alt="University of Arkansas logo"
+            />
+          </div>
+          <div class="university-logo">
+            <img
+              src="images/university-logos/purdue.png"
+              alt="Purdue University logo"
+            />
+          </div>
+          <div class="university-logo">
+            <img
+              src="images/university-logos/harvard.png"
+              alt="Harvard University logo"
+            />
+          </div>
+          <div class="university-logo">
+            <img
+              src="images/university-logos/princeton.png"
+              alt="Princeton University logo"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
 
-        // Add click handlers for course cards
-        courseCards.forEach((card) => {
-          card.addEventListener("click", function () {
-            const courseTitle = this.querySelector(".course-label").textContent;
-            console.log(`${courseTitle} clicked`);
-
-            // Add ripple effect
-            const ripple = document.createElement("span");
-            const rect = this.getBoundingClientRect();
-            const size = Math.max(rect.width, rect.height);
-            const x = event.clientX - rect.left - size / 2;
-            const y = event.clientY - rect.top - size / 2;
-
-            ripple.style.width = ripple.style.height = size + "px";
-            ripple.style.left = x + "px";
-            ripple.style.top = y + "px";
-            ripple.classList.add("ripple");
-
-            this.appendChild(ripple);
-
-            setTimeout(() => {
-              ripple.remove();
-            }, 600);
-          });
-        });
-
-        // Add smooth scroll animation for course cards
-        const observerOptions = {
-          threshold: 0.1,
-          rootMargin: "0px 0px -50px 0px",
-        };
-
-        const observer = new IntersectionObserver((entries) => {
-          entries.forEach((entry) => {
-            if (entry.isIntersecting) {
-              entry.target.style.opacity = "1";
-              entry.target.style.transform = "translateY(0)";
-            }
-          });
-        }, observerOptions);
-
-        // Initialize course cards with animation
-        courseCards.forEach((card, index) => {
-          card.style.opacity = "0";
-          card.style.transform = "translateY(30px)";
-          card.style.transition = `opacity 0.6s ease ${
-            index * 0.1
-          }s, transform 0.6s ease ${index * 0.1}s`;
-          observer.observe(card);
-        });
-      });
-
-      // Add CSS for ripple effect
-      const style = document.createElement("style");
-      style.textContent = `
-        .course-card {
-          position: relative;
-          overflow: hidden;
-        }
-        
-        .ripple {
-          position: absolute;
-          border-radius: 50%;
-          background: rgba(0, 0, 0, 0.1);
-          transform: scale(0);
-          animation: ripple-animation 0.6s linear;
-          pointer-events: none;
-        }
-        
-        @keyframes ripple-animation {
-          to {
-            transform: scale(4);
-            opacity: 0;
-          }
-        }
-      `;
-      document.head.appendChild(style);
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
