Update university logos in index.html to use new placement images and adjust styles in style.css for improved layout and responsiveness.

--- a/index.html
+++ b/index.html
@@ -257,74 +257,74 @@
         <div class="university-grid">
           <div class="university-logo">
             <img
-              src="images/university-logos/greenwich.png"
-              alt="University of Greenwich logo"
+              src="images/placements/1.jpg"
+              alt="1"
             />
           </div>
           <div class="university-logo">
             <img
-              src="images/university-logos/oxford.png"
-              alt="University of Oxford logo"
+              src="images/placements/2.jpg"
+              alt="2"
             />
           </div>
           <div class="university-logo">
             <img
-              src="images/university-logos/chicago.png"
-              alt="The University of Chicago logo"
+              src="images/placements/3.jpg"
+              alt="3"
             />
           </div>
           <div class="university-logo">
             <img
-              src="images/university-logos/temple.png"
-              alt="Temple University logo"
+              src="images/placements/4.jpg"
+              alt="4"
             />
           </div>
           <div class="university-logo">
             <img
-              src="images/university-logos/greenwich.png"
-              alt="University of Greenwich logo"
+              src="images/placements/5.jpg"
+              alt="5"
             />
           </div>
           <div class="university-logo">
             <img
-              src="images/university-logos/oxford.png"
-              alt="University of Oxford logo"
+              src="images/placements/6.jpg"
+              alt="6"
             />
           </div>
           <div class="university-logo">
             <img
-              src="images/university-logos/chicago.png"
-              alt="The University of Chicago logo"
+              src="images/placements/7.jpg"
+              alt="7"
             />
           </div>
           <div class="university-logo">
             <img
-              src="images/university-logos/temple.png"
-              alt="Temple University logo"
+              src="images/placements/8.jpg"
+              alt="8"
             />
           </div>
           <div class="university-logo">
             <img
-              src="images/university-logos/arkansas.png"
-              alt="University of Arkansas logo"
+              src="images/placements/9.jpg"
+              alt="9"
             />
           </div>
           <div class="university-logo">
             <img
-              src="images/university-logos/purdue.png"
-              alt="Purdue University logo"
+              src="images/placements/10.jpg"
+              alt="10"
             />
           </div>
           <div class="university-logo">
             <img
-              src="images/university-logos/harvard.png"
-              alt="Harvard University logo"
+              src="images/placements/11.jpg"
+              alt="11"
             />
           </div>
           <div class="university-logo">
             <img
-              src="images/university-logos/princeton.png"
-              alt="Princeton University logo"
+              src="images/placements/12.jpg"
+              alt="12"
             />
           </div>
         </div>
