Enhance university logos section in index.html by simplifying image tags for cleaner markup and adding a new accolade rank style for improved visual presentation.

--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
           font-size: 12px;
           line-height: 1.2;
         }
+
+        .accolade-rank {
+          transform: translateY(-20px);
+        }
       }
     </style>
   </head>
@@ -356,76 +360,40 @@
       <div class="university-partners-container">
         <div class="university-grid">
           <div class="university-logo">
-            <img
-              src="images/placements/1.jpg"
-              alt="1"
-            />
+            <img src="images/placements/1.jpg" alt="1" />
           </div>
           <div class="university-logo">
-            <img
-              src="images/placements/2.jpg"
-              alt="2"
-            />
+            <img src="images/placements/2.jpg" alt="2" />
           </div>
           <div class="university-logo">
-            <img
-              src="images/placements/3.jpg"
-              alt="3"
-            />
+            <img src="images/placements/3.jpg" alt="3" />
           </div>
           <div class="university-logo">
-            <img
-              src="images/placements/4.jpg"
-              alt="4"
-            />
+            <img src="images/placements/4.jpg" alt="4" />
           </div>
           <div class="university-logo">
-            <img
-              src="images/placements/5.jpg"
-              alt="5"
-            />
+            <img src="images/placements/5.jpg" alt="5" />
           </div>
           <div class="university-logo">
-            <img
-              src="images/placements/6.jpg"
-              alt="6"
-            />
+            <img src="images/placements/6.jpg" alt="6" />
           </div>
           <div class="university-logo">
-            <img
-              src="images/placements/7.jpg"
-              alt="7"
-            />
+            <img src="images/placements/7.jpg" alt="7" />
           </div>
           <div class="university-logo">
-            <img
-              src="images/placements/8.jpg"
-              alt="8"
-            />
+            <img src="images/placements/8.jpg" alt="8" />
           </div>
           <div class="university-logo">
-            <img
-              src="images/placements/9.jpg"
-              alt="9"
-            />
+            <img src="images/placements/9.jpg" alt="9" />
           </div>
           <div class="university-logo">
-            <img
-              src="images/placements/10.jpg"
-              alt="10"
-            />
+            <img src="images/placements/10.jpg" alt="10" />
           </div>
           <div class="university-logo">
-            <img
-              src="images/placements/11.jpg"
-              alt="11"
-            />
+            <img src="images/placements/11.jpg" alt="11" />
           </div>
           <div class="university-logo">
-            <img
-              src="images/placements/12.jpg"
-              alt="12"
-            />
+            <img src="images/placements/12.jpg" alt="12" />
           </div>
         </div>
       </div>
