Implement Alumni Section in index.html with new styles in style.css, including responsive grid layout and individual alumni cards. Update background color for accolades section and add new alumni images.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
       /* LBSIM Rankings & Accolades Section */
       .accolades-section {
-        background-color: #1c2a5e;
+        background-color: #324fbb;
         padding: 80px 0;
         font-family: "Segoe UI", "Helvetica Neue", Arial, sans-serif;
       }
@@ -455,6 +455,342 @@
           <div class="accolade-card" data-publication="BUSINESS TODAY">
             <img src="images/award.png" alt="Award" class="award-image" />
             <div class="accolade-rank">18<sup>th</sup></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Alumni Section -->
+    <section class="alumni-section">
+      <div class="alumni-container">
+        <h2>Our Distinguished Alumni</h2>
+        <div class="alumni-grid">
+          <!-- Alumni Card 1 -->
+          <!-- <div class="alumni-card">
+            <div class="alumni-image-wrapper">
+              <img
+                src="/images/alumni/vrinda-jain.jpg"
+                alt="Benjamin Evans"
+                class="alumni-image"
+              />
+            </div>
+            <div class="alumni-info">
+              <h3 class="alumni-name">Vrinda Jain</h3>
+              <p class="alumni-desc">
+                LBSIM offers a rich platform for us to acquire a well-rounded perspective, ensuring we are well-prepared for the industry
+              </p>
+              <div class="alumni-meta">
+                <span class="meta-item">
+                  <svg
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
+                    ></path>
+                  </svg>
+                  <span class="alumni-company">OXANE PARTNERS</span>
+                </span>
+                <span class="meta-item">
+                  <svg
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M12 14l9-5-9-5-9 5 9 5z"></path>
+                    <path
+                      d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"
+                    ></path>
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222 4 2.222V20M1 12v7a2 2 0 002 2h18a2 2 0 002-2v-7"
+                    ></path>
+                  </svg>
+                  <span class="alumni-batch">Batch PGDM R&BA (2022-24)</span>
+                </span>
+              </div>
+            </div>
+          </div> -->
+          <!-- Alumni Card 1 -->
+          <!-- <div class="alumni-card">
+            <div class="alumni-image-wrapper">
+              <img
+                src="/images/alumni/anshika-singh.jpg"
+                alt="Benjamin Evans"
+                class="alumni-image"
+              />
+            </div>
+            <div class="alumni-info">
+              <h3 class="alumni-name">Anshika Singh</h3>
+              <p class="alumni-desc">
+                LBSIM has been instrumental in equipping me with a comprehensive grasp of management principles, ensuring I am well-prepared for the professional arena. 
+              </p>
+              <div class="alumni-meta">
+                <span class="meta-item">
+                  <svg
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
+                    ></path>
+                  </svg>
+                  <span class="alumni-company">DELOITTE USI</span>
+                </span>
+                <span class="meta-item">
+                  <svg
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M12 14l9-5-9-5-9 5 9 5z"></path>
+                    <path
+                      d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"
+                    ></path>
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222 4 2.222V20M1 12v7a2 2 0 002 2h18a2 2 0 002-2v-7"
+                    ></path>
+                  </svg>
+                  <span class="alumni-batch">Batch PGDM General (2022-24)</span>
+                </span>
+              </div>
+            </div>
+          </div> -->
+          <!-- Alumni Card 1 -->
+          <div class="alumni-card">
+            <div class="alumni-image-wrapper">
+              <img
+                src="/images/alumni/anmol.jpg"
+                alt="Benjamin Evans"
+                class="alumni-image"
+              />
+            </div>
+            <div class="alumni-info">
+              <h3 class="alumni-name">Anmol Dwivedi</h3>
+              <p class="alumni-desc">
+                LBSIM has significantly influenced how my personality has
+                evolved.
+              </p>
+              <div class="alumni-meta">
+                <span class="meta-item">
+                  <svg
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
+                    ></path>
+                  </svg>
+                  <span class="alumni-company">Marsh India</span>
+                </span>
+                <span class="meta-item">
+                  <svg
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M12 14l9-5-9-5-9 5 9 5z"></path>
+                    <path
+                      d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"
+                    ></path>
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222 4 2.222V20M1 12v7a2 2 0 002 2h18a2 2 0 002-2v-7"
+                    ></path>
+                  </svg>
+                  <span class="alumni-batch">Batch 2021-2023</span>
+                </span>
+              </div>
+            </div>
+          </div>
+          <!-- Alumni Card 2 -->
+          <div class="alumni-card">
+            <div class="alumni-image-wrapper">
+              <img
+                src="/images/alumni/harshil-gupta.jpg"
+                alt="Noah Anderson"
+                class="alumni-image"
+              />
+            </div>
+            <div class="alumni-info">
+              <h3 class="alumni-name">Harshil Gupta</h3>
+              <p class="alumni-desc">
+                I extend my sincere appreciation to LBSIM for the truly
+                transformative experience it has given me.
+              </p>
+              <div class="alumni-meta">
+                <span class="meta-item">
+                  <svg
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
+                    ></path>
+                  </svg>
+                  <span class="alumni-company">MARUTI SUZUKI</span>
+                </span>
+                <span class="meta-item">
+                  <svg
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M12 14l9-5-9-5-9 5 9 5z"></path>
+                    <path
+                      d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"
+                    ></path>
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222 4 2.222V20M1 12v7a2 2 0 002 2h18a2 2 0 002-2v-7"
+                    ></path>
+                  </svg>
+                  <span class="alumni-batch">Batch PGDM General (2022-24)</span>
+                </span>
+              </div>
+            </div>
+          </div>
+          <!-- Alumni Card 3 -->
+          <div class="alumni-card">
+            <div class="alumni-image-wrapper">
+              <img
+                src="/images/alumni/arjun.jpg"
+                alt="Emma Davis"
+                class="alumni-image"
+              />
+            </div>
+            <div class="alumni-info">
+              <h3 class="alumni-name">Arjun Khajuria</h3>
+              <p class="alumni-desc">
+                Joining LBSIM's PGDM program has been an enriching journey,
+                going beyond traditional education.
+              </p>
+              <div class="alumni-meta">
+                <span class="meta-item">
+                  <svg
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
+                    ></path>
+                  </svg>
+                  <span class="alumni-company">ASIAN PAINTS</span>
+                </span>
+                <span class="meta-item">
+                  <svg
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M12 14l9-5-9-5-9 5 9 5z"></path>
+                    <path
+                      d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"
+                    ></path>
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222 4 2.222V20M1 12v7a2 2 0 002 2h18a2 2 0 002-2v-7"
+                    ></path>
+                  </svg>
+                  <span class="alumni-batch">Batch PGDM General (2022-24)</span>
+                </span>
+              </div>
+            </div>
+          </div>
+          <!-- Alumni Card 4 -->
+          <div class="alumni-card">
+            <div class="alumni-image-wrapper">
+              <img
+                src="/images/alumni/sourasish-chatterjee.jpg"
+                alt="Amelia Clark"
+                class="alumni-image"
+              />
+            </div>
+            <div class="alumni-info">
+              <h3 class="alumni-name">Sourasish Chatterjee</h3>
+              <p class="alumni-desc">
+                My time here at LBSIM has been very eventful with learnings and memories at every step of the way. 
+              </p>
+              <div class="alumni-meta">
+                <span class="meta-item">
+                  <svg
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
+                    ></path>
+                  </svg>
+                  <span class="alumni-company">CAPGEMINI</span>
+                </span>
+                <span class="meta-item">
+                  <svg
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M12 14l9-5-9-5-9 5 9 5z"></path>
+                    <path
+                      d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"
+                    ></path>
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222 4 2.222V20M1 12v7a2 2 0 002 2h18a2 2 0 002-2v-7"
+                    ></path>
+                  </svg>
+                  <span class="alumni-batch">Batch PGDM GEN (2022-24)</span>
+                </span>
+              </div>
+            </div>
           </div>
         </div>
       </div>
