Update "Who We Are" section in index.html to enhance content clarity and detail, including the full name of LBSIM and a more comprehensive description of the institute's background and achievements.

--- a/index.html
+++ b/index.html
@@ -256,17 +256,15 @@
           <div class="text-content">
             <div class="subtitle">WHO WE ARE</div>
             <h2 class="main-title">
-              Lal Bahadur Shastri Institute of Management
+              Lal Bahadur Shastri Institute of Management (LBSIM)
             </h2>
             <p class="description">
-              Delhi is a premier and dynamic institute of Management and
-              Information Technology Education. Offering AICTE-approved PGDM
-              programs in areas like General Management, Finance, Research &
-              Business Analytics, and more, LBSIM blends rigorous academics with
-              industry exposure. With strong corporate linkages, experienced
-              faculty, and a focus on ethics and leadership, LBSIM prepares
-              students to excel as responsible professionals in a dynamic
-              global environment.
+              Delhi is among India’s <b>premium private business schools</b>. <b>LBSIM</b> was
+              established in <b>1995</b> to perpetuate the vision and values of <b>Bharat
+              Ratna Shri Lal Bahadur Shastri Ji</b> – India’s <b>2nd Prime Minister</b>, by
+              his son - <b>Shri Anil Shastri ji</b>, former Union Minister and
+              Chairman, Board of Governors. LBSIM is powered by <b>55+ PhD Faculty</b>,
+              <b>6000+ Alumni</b> and <b>100+ Corporates</b>.
             </p>
             <button class="cta-button">DISCOVER MORE</button>
           </div>
@@ -750,7 +748,8 @@
             <div class="alumni-info">
               <h3 class="alumni-name">Sourasish Chatterjee</h3>
               <p class="alumni-desc">
-                My time here at LBSIM has been very eventful with learnings and memories at every step of the way. 
+                My time here at LBSIM has been very eventful with learnings and
+                memories at every step of the way.
               </p>
               <div class="alumni-meta">
                 <span class="meta-item">
