Add Internal Immersions section to index.html with corresponding styles in style.css, including new immersion cards and a campus image update.

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
           <div class="image-content">
             <div class="image-wrapper">
               <img
-                src="https://images.unsplash.com/photo-1562774053-701939374585?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80"
+                src="/images/LBSIM Campus.webp"
                 alt="University Campus"
                 class="campus-image"
               />
@@ -794,6 +794,35 @@
         </div>
       </div>
     </section>
+
+    <!-- Internal Immersions -->
+<section class="immersions-section">
+    <div class="immersions-container container">
+        <h2>Internal Immersions</h2>
+        <div class="immersions-grid">
+            <div class="immersion-card large">
+                <img src="https://images.unsplash.com/photo-1609122398542-3a78a6f23f17?q=80&w=2070&auto=format&fit=crop" alt="Hampi Temple" />
+                <div class="caption">Hampi Temple</div>
+            </div>
+            <div class="immersion-card">
+                <img src="https://images.unsplash.com/photo-1588133321948-424633715569?q=80&w=1931&auto=format&fit=crop" alt="Golden Temple" />
+                <div class="caption">Golden Temple</div>
+            </div>
+            <div class="immersion-card">
+                <img src="https://images.unsplash.com/photo-1594734438317-035222621741?q=80&w=1935&auto=format&fit=crop" alt="Konarak Sun Temple" />
+                <div class="caption">Konarak Sun Temple</div>
+            </div>
+            <div class="immersion-card">
+                <img src="https://images.unsplash.com/photo-1625754176846-9736a2873a21?q=80&w=1935&auto=format&fit=crop" alt="Gwalior Fort" />
+                <div class="caption">Gwalior Fort</div>
+            </div>
+            <div class="immersion-card">
+                <img src="https://images.unsplash.com/photo-1592359434873-19818b419f7e?q=80&w=1964&auto=format&fit=crop" alt="Mahabodhi Temple" />
+                <div class="caption">Mahabodhi Temple</div>
+            </div>
+        </div>
+    </div>
+</section>
 
     <script src="script.js"></script>
   </body>
