Refactor Internal Immersions section in index.html to update immersion cards and adjust styles in style.css, including padding changes for improved layout.

--- a/index.html
+++ b/index.html
@@ -259,11 +259,13 @@
               Lal Bahadur Shastri Institute of Management (LBSIM)
             </h2>
             <p class="description">
-              Delhi is among India’s <b>premium private business schools</b>. <b>LBSIM</b> was
-              established in <b>1995</b> to perpetuate the vision and values of <b>Bharat
-              Ratna Shri Lal Bahadur Shastri Ji</b> – India’s <b>2nd Prime Minister</b>, by
-              his son - <b>Shri Anil Shastri ji</b>, former Union Minister and
-              Chairman, Board of Governors. LBSIM is powered by <b>55+ PhD Faculty</b>,
+              Delhi is among India’s <b>premium private business schools</b>.
+              <b>LBSIM</b> was established in <b>1995</b> to perpetuate the
+              vision and values of
+              <b>Bharat Ratna Shri Lal Bahadur Shastri Ji</b> – India’s
+              <b>2nd Prime Minister</b>, by his son -
+              <b>Shri Anil Shastri ji</b>, former Union Minister and Chairman,
+              Board of Governors. LBSIM is powered by <b>55+ PhD Faculty</b>,
               <b>6000+ Alumni</b> and <b>100+ Corporates</b>.
             </p>
             <button class="cta-button">DISCOVER MORE</button>
@@ -796,33 +798,48 @@
     </section>
 
     <!-- Internal Immersions -->
-<section class="immersions-section">
-    <div class="immersions-container container">
+    <!-- <section class="immersions-section">
+      <div class="immersions-container container">
         <h2>Internal Immersions</h2>
         <div class="immersions-grid">
-            <div class="immersion-card large">
-                <img src="https://images.unsplash.com/photo-1609122398542-3a78a6f23f17?q=80&w=2070&auto=format&fit=crop" alt="Hampi Temple" />
-                <div class="caption">Hampi Temple</div>
-            </div>
-            <div class="immersion-card">
-                <img src="https://images.unsplash.com/photo-1588133321948-424633715569?q=80&w=1931&auto=format&fit=crop" alt="Golden Temple" />
-                <div class="caption">Golden Temple</div>
-            </div>
-            <div class="immersion-card">
-                <img src="https://images.unsplash.com/photo-1594734438317-035222621741?q=80&w=1935&auto=format&fit=crop" alt="Konarak Sun Temple" />
-                <div class="caption">Konarak Sun Temple</div>
-            </div>
-            <div class="immersion-card">
-                <img src="https://images.unsplash.com/photo-1625754176846-9736a2873a21?q=80&w=1935&auto=format&fit=crop" alt="Gwalior Fort" />
-                <div class="caption">Gwalior Fort</div>
-            </div>
-            <div class="immersion-card">
-                <img src="https://images.unsplash.com/photo-1592359434873-19818b419f7e?q=80&w=1964&auto=format&fit=crop" alt="Mahabodhi Temple" />
-                <div class="caption">Mahabodhi Temple</div>
-            </div>
+          <div class="immersion-card large">
+            <img
+              src="https://images.unsplash.com/photo-1512453979798-5ea266f8880c?auto=format&fit=crop&w=800&q=80"
+              alt="Taj Mahal"
+            />
+            <div class="caption">Taj Mahal</div>
+          </div>
+          <div class="immersion-card">
+            <img
+              src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=800&q=80"
+              alt="Gateway of India"
+            />
+            <div class="caption">Gateway of India</div>
+          </div>
+          <div class="immersion-card">
+            <img
+              src="https://images.unsplash.com/photo-1502086223501-7ea6ecd79368?auto=format&fit=crop&w=800&q=80"
+              alt="Qutub Minar"
+            />
+            <div class="caption">Qutub Minar</div>
+          </div>
+          <div class="immersion-card">
+            <img
+              src="https://images.unsplash.com/photo-1512453979798-5ea266f8880c?auto=format&fit=crop&w=800&q=80"
+              alt="Amer Fort"
+            />
+            <div class="caption">Amer Fort</div>
+          </div>
+          <div class="immersion-card">
+            <img
+              src="https://images.unsplash.com/photo-1512453979798-5ea266f8880c?auto=format&fit=crop&w=800&q=80"
+              alt="Mysore Palace"
+            />
+            <div class="caption">Mysore Palace</div>
+          </div>
         </div>
-    </div>
-</section>
+      </div>
+    </section> -->
 
     <script src="script.js"></script>
   </body>
