--- a/index.html
+++ b/index.html
@@ -357,6 +357,23 @@
     <!-- University Partners Section -->
     <section class="university-partners">
       <h2 style="color: #000">Placement & Recruiters</h2>
+      <!-- Stats Banner Section -->
+    <div class="stats-banner">
+      <div class="stats-container container">
+        <div class="stat-item">
+          <p class="stat-number">20.00 LPA</p>
+          <p class="stat-text">Highest Salary</p>
+        </div>
+        <div class="stat-item">
+          <p class="stat-number">12.25 LPA</p>
+          <p class="stat-text">Average Salary</p>
+        </div>
+        <div class="stat-item">
+          <p class="stat-number">148</p>
+          <p class="stat-text">Total Recruiters</p>
+        </div>
+      </div>
+    </div>
       <div class="university-partners-container">
         <div class="university-grid">
           <div class="university-logo">
