--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
   <body>
     <section class="accreditations-section container">
       <h2>Accreditations & Memberships</h2>
-      <div class="accreditations">
+      <div class="accreditations-wrapper">
+        <div class="accreditations">
         <!-- Column 1: Accreditations -->
         <div class="column">
           <h3>Accreditations</h3>
@@ -135,9 +136,6 @@
                 src="images/accreditations/imgi_12_membership-logo9.webp"
                 alt="AMDISA"
               />
-            </div>
-            <div class="logo-box" style="visibility: hidden">
-              <!-- Empty slot -->
             </div>
           </div>
         </div>
@@ -240,11 +238,13 @@
                 alt="GMAT"
               />
             </div>
-            <div class="logo-box" style="visibility: hidden">
-              <!-- Empty slot -->
-            </div>
           </div>
         </div>
+      </div>
+      <div class="slider-controls">
+        <button class="prev-btn" aria-label="Previous Slide">&lt;</button>
+        <div class="slider-indicators"></div>
+        <button class="next-btn" aria-label="Next Slide">&gt;</button>
       </div>
     </section>
 
